WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110951
Threaded HTML Parser fails fast/dom/HTMLAnchorElement/anchor-no-multiple-windows.html in debug
https://bugs.webkit.org/show_bug.cgi?id=110951
Summary
Threaded HTML Parser fails fast/dom/HTMLAnchorElement/anchor-no-multiple-wind...
Adam Barth
Reported
2013-02-26 23:58:41 PST
crash log for DumpRenderTree (pid 6174): STDOUT: <empty> STDERR: ASSERTION FAILED: !pdl->isLoading() STDERR: ../../third_party/WebKit/Source/WebCore/loader/FrameLoader.cpp(2115) : void WebCore::FrameLoader::checkLoadCompleteForThisFrame() STDERR: 1 0x7fa215c6551c STDERR: 2 0x7fa215c66548 STDERR: 3 0x7fa215c67a33 STDERR: 4 0x7fa215c3bf5f STDERR: 5 0x7fa215c7c628 STDERR: 6 0x7fa215c7e84e STDERR: 7 0x7fa215cbe9e8 STDERR: 8 0x7fa215cbf14a STDERR: 9 0x7fa215c9a689 STDERR: 10 0x7fa215c94c7b STDERR: 11 0x7fa215c7c7e3 STDERR: 12 0x7fa215c7c677 STDERR: 13 0x7fa215c3c14e STDERR: 14 0x7fa215c62f56 STDERR: 15 0x7fa214ea42a1 STDERR: 16 0x7fa214ea5257 STDERR: 17 0x7fa214ea533f STDERR: 18 0x7fa214ea5379 STDERR: 19 0x7fa21583ae52 STDERR: 20 0x7fa2161f451a STDERR: 21 0x7fa21ae4fb36 STDERR: 22 0x7fa21ae4a4ca STDERR: 23 0x7fa21ae4a49b STDERR: 24 0xc7282a062ee STDERR: Received signal 11 SEGV_MAPERR 0000bbadbeef STDERR: [0x7fa219815dd0] base::debug::StackTrace::StackTrace() STDERR: [0x7fa21981567a] base::debug::(anonymous namespace)::StackDumpSignalHandler() STDERR: [0x7fa20e6918f0] <unknown> STDERR: [0x7fa215c65526] WebCore::FrameLoader::checkLoadCompleteForThisFrame() STDERR: [0x7fa215c66548] WebCore::FrameLoader::checkLoadComplete() STDERR: [0x7fa215c67a33] WebCore::FrameLoader::receivedMainResourceError() STDERR: [0x7fa215c3bf5f] WebCore::DocumentLoader::mainReceivedError() STDERR: [0x7fa215c7c628] WebCore::MainResourceLoader::receivedError() STDERR: [0x7fa215c7e84e] WebCore::MainResourceLoader::notifyFinished() STDERR: [0x7fa215cbe9e8] WebCore::CachedResource::checkNotify() STDERR: [0x7fa215cbf14a] WebCore::CachedResource::stopLoading() STDERR: [0x7fa215c9a689] WebCore::SubresourceLoader::releaseResources() STDERR: [0x7fa215c94c7b] WebCore::ResourceLoader::cancel() STDERR: [0x7fa215c7c7e3] WebCore::MainResourceLoader::cancel() STDERR: [0x7fa215c7c677] WebCore::MainResourceLoader::cancel() STDERR: [0x7fa215c3c14e] WebCore::DocumentLoader::stopLoading() STDERR: [0x7fa215c62f56] WebCore::FrameLoader::stopAllLoaders() STDERR: [0x7fa214ea42a1] WebCore::Document::open() STDERR: [0x7fa214ea5257] WebCore::Document::write() STDERR: [0x7fa214ea533f] WebCore::Document::write() STDERR: [0x7fa214ea5379] WebCore::Document::writeln() STDERR: [0x7fa21583ae52] WebCore::V8HTMLDocument::writelnMethodCustom() STDERR: [0x7fa2161f451a] WebCore::HTMLDocumentV8Internal::writelnMethodCallback() STDERR: [0x7fa21ae4fb36] v8::internal::HandleApiCallHelper<>() STDERR: [0x7fa21ae4a4ca] v8::internal::Builtin_Impl_HandleApiCall() STDERR: [0x7fa21ae4a49b] v8::internal::Builtin_HandleApiCall() STDERR: [0x0c7282a062ee] <unknown> STDERR: r8: 00007fa2082cf7e0 r9: 00007fa21675275e r10: 0000000000000001 r11: 0000000000000000 STDERR: r12: 00007fffcc5645e8 r13: 0000000000000001 r14: 0000000000000003 r15: 00007fffcc5645f0 STDERR: di: 0000000000000000 si: 00000000efcdab90 bp: 00007fffcc563c60 bx: 00000abf99e6e878 STDERR: dx: 00007fa20e67de00 ax: 00000000bbadbeef cx: 00007fa20e3d7acd sp: 00007fffcc563b70 STDERR: ip: 00007fa215c65526 efl: 0000000000010246 cgf: 0000000000000033 erf: 0000000000000006 STDERR: trp: 000000000000000e msk: 0000000000000000 cr2: 00000000bbadbeef
Attachments
Patch
(2.69 KB, patch)
2013-02-27 13:40 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(2.78 KB, patch)
2013-02-27 14:02 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2013-02-27 13:40:21 PST
Created
attachment 190595
[details]
Patch
Adam Barth
Comment 2
2013-02-27 14:00:01 PST
Comment on
attachment 190595
[details]
Patch Spoke with Nate. Improved version coming.
Adam Barth
Comment 3
2013-02-27 14:02:37 PST
Created
attachment 190600
[details]
Patch
Eric Seidel (no email)
Comment 4
2013-02-27 14:18:13 PST
Comment on
attachment 190600
[details]
Patch You're blowing my mind.
Eric Seidel (no email)
Comment 5
2013-02-27 14:18:31 PST
This has the potential to bring in our DCL number a little?
Adam Barth
Comment 6
2013-02-27 14:22:40 PST
I don't think it's much related to that.
WebKit Review Bot
Comment 7
2013-02-27 14:41:14 PST
Comment on
attachment 190600
[details]
Patch Clearing flags on attachment: 190600 Committed
r144240
: <
http://trac.webkit.org/changeset/144240
>
WebKit Review Bot
Comment 8
2013-02-27 14:41:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug