Source/WebCore/loader/DocumentLoader.h
@@ -85,6 +85,7 @@ namespace WebCore {
         PassRefPtr<ResourceBuffer> mainResourceData() const;
         
         DocumentWriter* writer() const { return &m_writer; }
+        Document* document() const;
 
         const ResourceRequest& originalRequest() const;
         const ResourceRequest& originalRequestCopy() const;
